--- a/data_explore.Rmd
+++ b/data_explore.Rmd
@@ -45,62 +45,10 @@ loiczid_raster       <- raster(loiczid_raster_file)
 names(loiczid_raster) <- 'loiczid'
 ```
 
-<<<<<<< HEAD
-``` {r ggplot_theme_setups, echo = FALSE}
 
-### generic theme for all plots
-ggtheme_plot <- theme(axis.ticks = element_blank(),
-                    text = element_text(family = 'Helvetica', color = 'gray30', size = 8),
-                    plot.title = element_text(size = rel(1.5), hjust = 0, face = 'bold'),
-                    legend.position = 'right')
-
-# ggtheme_map <- theme(axis.ticks = element_blank(), axis.text = element_blank(),
-#                     text = element_text(family = 'Helvetica', color = 'gray30', size = 8),
-#                     plot.title = element_text(size = rel(1.5), hjust = 0, face = 'bold'),
-#                     legend.position = 'right')
-
-### theme for species range maps - based on generic plot theme
-ggtheme_map <- ggtheme_plot +
-  theme(axis.text = element_blank())
-
-
-```
-
-``` {r species_map_functions, echo = FALSE, warning = FALSE, message = FALSE}
-
-### Species Map Function ###
-# This function takes a single species scientific name as input, then grabs all 
-# occurrence cells and associated Aquamaps probability and/or IUCN proportional area
-# per cell
-
-get_spp_map <- function(species){
-  spp_id <- spp_list_base %>%
-    filter(sciname == species & is.na(parent_sid)) %>%
-    dplyr::select(am_sid, iucn_sid, sciname) %>%
-    unique()
-  iucn_spp_map <- iucn_spp_cells %>%
-    filter(sciname == species) %>%
-    group_by(loiczid) %>%        
-    summarize(iucn_area = max(prop_area))
-  ### The group_by() and summarize() are to collapse cells with overlapped polygons, fixing the duplicate 'by' issue
-  am_spp_map   <- am_spp_cells %>%
-    filter(am_sid == spp_id$am_sid) %>%
-    rename(am_prob = prob)
-  spp_map <- full_join(iucn_spp_map, am_spp_map, by = 'loiczid')%>%
-    as.data.frame()
-  
-  return(spp_map)
-}
-
-### Plot Species Map function
-### uses ggplot to create a formatted map of species ranges, including
-### Aquamaps, IUCN, and overlapped ranges; returns the plot object.
-plot_rangemap <- function(spp) {
-  map <- get_spp_map(spp)
-=======
 ```{r get spp_list, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
 data_file <- 'data/spp_list_w_area_percent_noextinct.csv'
->>>>>>> 82d9692a1d3ff2bc04d3419a36d72a1dc650268c
+
 
 if(!file.exists(data_file)) {
   ### species info list - scinames, IUCN species ID, AM species ID, category etc
@@ -385,27 +333,35 @@ levelplot(iucn_sp_map,par.settings=myTheme,main='IUCN Dataset',colorkey=list(at=
 
 Now look at all aquamaps species
 
-```{r all aquamaps,eval=F}
+```{r all aquamaps,eval=F, echo=F}
 
 am_spp_cells_big = fread(file.path(dir_anx, 'raw/aquamaps_2014/tables/ohi_hcaf_species_native.csv'))
 #am_spp_cell_big is missing loiczid info so bring in hcaf to match
 
-hcaf <- read_csv(file.path(dir_anx,'raw/aquamaps_2014/tables/hcaf.csv')) #bring this in just to get loiczid
-
+hcaf <- fread(file.path(dir_anx,'raw/aquamaps_2014/tables/hcaf.csv'))%>% #bring this in just to get loiczid
+          as.data.frame()%>%
+            select(CsquareCode,LOICZID)%>%
+              rename(loiczid=LOICZID)
 
 all_am = am_spp_cells_big%>%
-          group_by(loiczid)%>%
+          select(SpeciesID,CsquareCode)%>%
+          group_by(CsquareCode)%>%
           summarize(count=n())%>%
           as.data.frame()
 
-all_am_map = subs(loiczid_raster, all_am[ , c('loiczid', 'count')], 
+
+all = left_join(all_am,hcaf)
+
+
+all_am_map = subs(loiczid_raster, all[ , c('loiczid', 'count')], 
                      by = 'loiczid', 
                      which = 'count', 
                      subsWithNA = TRUE)
 
-levelplot(all_am_map,par.settings=myTheme,main='Entire Aquamaps Dataset',colorkey=list(at=seq(0, 1063, length=15)))
+levelplot(all_am_map,par.settings=myTheme,main='Entire Aquamaps Dataset')
 ```
 
+![image](./figures/all_aquamaps_map.png)
 
 Plotting species from q3 (area-matched)
 ```{r plot_spp_from_q3, echo = FALSE, warning = FALSE, message = FALSE, eval = TRUE}
