--- a/data_explore.Rmd
+++ b/data_explore.Rmd
@@ -114,7 +114,7 @@ spp_list_label <- spp_list %>%
   mutate(sciname_label = paste(str_sub(g, 1, 1), '. ', s, sep = '')) %>%
   select(-g, -s)
 
-scatter_arearatio_vs_overlap <- ggplot(spp_list, aes(x = area_ratio, y = sm_perc, color = log_total_area)) + 
+scatter_arearatio_vs_overlap <- ggplot(spp_list, aes(x = area_ratio, y = sm_perc, color = popn_category, size = category_score)) + 
   ggtheme_plot + 
   ### color the quadrant backgrounds:
     annotate("rect", xmin = area_ratio_quartiles[2],  xmax = 100, 
@@ -126,14 +126,19 @@ scatter_arearatio_vs_overlap <- ggplot(spp_list, aes(x = area_ratio, y = sm_perc
     annotate("rect", xmin = area_ratio_quartiles[2],  xmax =   0, 
                      ymin = pct_overlap_quartiles[2], ymax =   0, alpha = .3, fill= "orangered2") + 
   geom_point() + 
+  scale_colour_manual(values = c('LC'   = 'green4', 
+                                 'NT'   = 'greenyellow', 
+                                 'VU'   = 'yellow', 
+                                 'EN'   = 'orange', 
+                                 'CR' = 'orangered2')) +
   geom_vline(x = area_ratio_quartiles[c(1, 3)],
              color = 'grey50', linetype = 'dashed') +
   geom_hline(y = pct_overlap_quartiles[c(1, 3)],
              color = 'grey50', linetype = 'dashed') +
-  geom_point(data = spp_list_label, color = 'tomato2') + 
+  geom_point(data = spp_list_label, aes(size = category_score), color = 'grey30') + 
   geom_text(data = spp_list_label, 
             aes(label = sciname_label), 
-            color = 'tomato2',
+            color = 'grey30',
             fontface = 'bold.italic',
             size = 2,
             hjust = .25,
